--- a/research.html
+++ b/research.html
@@ -89,6 +89,9 @@
 									<header class="style1">
 										<h4>TOI-5143 (Radzom et al. 2024b, in prep.)</h4>
 									</header>
+									<div>
+									    <img src="images/subSat_RMs.jpg" width="771" height="361" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
+									</div>
 									<p>TOI-5143 is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
 										mission, and is only the <em>third</em> of such systems to have its stellar obliquity measured. We employ Bayesian Inference and the Doppler Shadow
 									technique to measure its stellar obliquity via the RM effect, finding it is well-aligned. Our result continues the trend of alignemnt 
@@ -102,7 +105,7 @@
 										<h4>TOI-5126 and TOI-5398 (Radzom et al. 2024a, accepted to AJ)</h4>
 									</header>
 									<div>
-									    <img src="images/subSat_RMs.jpg" width="1157" height="541" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
+									    <img src="images/subSat_RMs.jpg" width="771" height="361" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									</div>
 									<p>Sub-Saturns, with masses intermediate of Neptune and Jupiter, represent an interesting population to study both the origins
 										of giant planets and the mechanisms driving misalignment. In this context, we report measurements of the sky-projected stellar obliquity
@@ -117,8 +120,7 @@
 								<br>
 								<article class="box post">
 									<header class="style1">
-										<h2>N-body Simulations of Short-Period Giant Systems</h2>
-										<p>2021-2023</p>
+										<h3>N-body Simulations of Short-Period Giant Systems</h3>
 									</header>
 									
 									<p>
