--- a/research.html
+++ b/research.html
@@ -92,6 +92,7 @@
 									<div>
 									    <img src="images/dt5143.jpg" width="1065" height="347" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									</div>
+									<br>
 									<p>TOI-5143 is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
 										mission, and is only the <em>third</em> of such systems to have its stellar obliquity measured. We employ Bayesian Inference and the Doppler Shadow
 									technique to measure its stellar obliquity via the RM effect, finding it is well-aligned. Our result continues the trend of alignemnt 
@@ -107,6 +108,7 @@
 									<div>
 									    <img src="images/subSat_RMs.jpg" width="771" height="361" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									</div>
+									<br>
 									<p>Sub-Saturns, with masses intermediate of Neptune and Jupiter, represent an interesting population to study both the origins
 										of giant planets and the mechanisms driving misalignment. In this context, we report measurements of the sky-projected stellar obliquity
 										($\lambda$) via the Rossiter-McLaughlin effect for two sub-Saturns in compact multiple-transiting systems: TOI-5126\,b
@@ -128,35 +130,21 @@
 										to form only through dynamically violent processes such as high-eccentricity migration, as
 										they are rarely found to host nearby planetary companions.
 										However, warm Jupiters are commonly found in compact multi-planet systmes,
-										indicating that these wider-orbiting giants either have different origins, or 
-										may just undergo less dramatic inward migration (see eccentric migration paradigm proposed by 
-										Wu et al. 2023).</p>
-
-									<p>Additionally, these migration-based formation scenarios are solely informed by the
-										architecture of our own solar system, which we now know to be the exception rather
-										than the rule. Instead, thanks to space-based transit and Doppler velocity surveys,
-										we find there is a widespread prevalence of close-in "super-Earths"
-										, which suggests that the inner regions of protoplanetary disks are more massive than predicted
-										from our solar system. These compact planets often exhibit a surprising
-										"peas in a pod" structure (Weiss et al. 2018), where they share similar spacing,
-										masses, and radii, with typical masses from a few to a few tens of Earth masses and orbital
-										periods from a few days to months. If massive enough, these planets may trigger
-										run-away accretion <em>in situ</em> to become gas giants in the inner region of the disk before
-										the surrounding gas dissipates. Assuming the progenitor systems are more compact
-										than observed <em>Kepler</em> multis, an in situ-formed giant should naturally trigger instability
-										and subsequent dynamical sculpting once the disk has vanished.</p>
-									<!-- <figure> -->
-									    <!--<img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="400" height="300" align="right" alt="test2" /> -->
-									    <!--<figcaption>Period ratio of giants with respect to their nearest companion.</figcaption> -->
-									<!--</figure> -->
+										indicating that these wider-orbiting giants may have more quiescent origins, either 
+										undergoing less dramatic inward migration (see eccentric migration paradigm proposed by 
+										Wu et al. 2023), or perhaps forming in situ.</p>
+									<p>
+										Yet, recent companion searches have revealed a number of nearby companions to hot Jupiters
+										(e.g., WASP-47 b; Becker et al. 2015, Kepler-730 b; Canas et al. 2019, TOI-1130 c;
+										Huang et al. 2020, WASP-148 b; Hebrard et al. 2020, TOI-2494.01, TOI-5143.01; Guerrero_2021, WASP-132 b; Hord_2022)
+										and TTV campaigns (Wu et al. 2023) have revealed that hot Jupiters
+										reside in compact configurations more commonly than we thought.</p>
 									<div>
 									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="550" height="450" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
 									    <!--<p>Period ratio of giants with respect to their nearest companion as a function of period.</p>-->
 									</div>
 									
-									<p>To this end, I am currently leading a project with collaborators Songhu Wang,
-										Bonan Pu, Malena Rice, and Dong-Hong Wu that tests the viability of
-										this scenario using N-body simulations. We study and describe
+									<p>To this end, I am leading a project to test XXX whether shared N-body simulations. We study and describe
 										the dynamical consequences on compact multi-planet host systems which
 										contain an in situ-formed short-period gas giant. We find that in situ formation
 										naturally reproduces several known properties of hot and warm Jupiters, including
