updated intro to dissertation work

--- a/research.html
+++ b/research.html
@@ -52,22 +52,24 @@
 									<div>
 										<img src="images/HJ_irradiated_pc.jpg" width="468" height="347" align="left" style="margin: 10px 40px 10px 20px;" alt="NASA/Ames/JPL-Caltech" />
 									</div>
-									<p>Hot Jupiters, the shortest-period class of gas giants, are conventionally thought
-									to form through dynamically violent processes such as high-eccentricity migration.
-									Some of the most commonly referenced pieces of observational evidence for this are:
-										<ul style="margin-left: 20px">
-											<li>The near-zero rate of nearby planetary companions to hot Jupiters 
-												(see Steffen et al. 2012, Huang et al. 2016)</li>
-											<li>The presence of large misalignments in the stellar obliquity distribution of hot Jupiters 
-												(see Schlaufman et al. 2010, Winn et al. 2010, Albrecht et al. 2012)</li>
-										</ul>  
-									</p>
+									<p>Since the discovery of 51 Pegasi b in 1995, exoplanet scientists have been
+									puzzled by the existence of gas giants on close-in orbits known as hot Jupiters.
+									Various observational properties can be used to constrain their origins, such as
+									their system architectures, and eccentricity and stellar obliquity distributions.
+									Dedicated observational campagins over the past two decades have revealed that
+									hot Jupiters are often isolated, lacking nearby planetary companions, and have large
+									eccentricities and spin-orbit misalignments consistent with high-eccentricity migration
+										triggered by <u>violent dynamical evolution</u>. However, a growing sample of hot Jupiters have
+										 been discovered to host nearby companions on low-mutual inclination and aligned orbits, suggesting
+										that they have arrived at their current orbits via more <u>quiescent mechanisms</u> such as migration
+										through the protoplanetary disk or perhaps in situ formation.</p> 
+									
 
-									 <p>However, the somewhat wider-orbiting counterparts to hot Jupiters, known as warm Jupiters, may
-										 not share these properties, while their somewhat less massive counterparts, known as sub-Saturns,
-										 may have a nearby companion rate similar to warm Jupiters but an obliquity distribution more similar 
-										 to hot Jupiters. My PhD dissertation research at IU aims to disentangle the origins of these short-period
-										 giant planets via a combination of observational and numerical studies, which are detailed below.
+									 <p>Curiously, the population of wider-orbiting counterparts to hot Jupiters, known as warm Jupiters, appear
+										 to have properties consistent with quiescent origins, and their somewhat less massive counterparts, known as hot sub-Saturns,
+										may have properties intermediate to hot and warm Jupiters.
+										 My PhD dissertation research at IU aims to disentangle the origins of short-period
+										 giant planets through a combination of observational and numerical studies, which are detailed below.
 									</p>
 									
 									<header class="style1">
@@ -103,7 +105,7 @@
 									demonstrates that some hot Jupiters <em>must</em> have quiescent origins, having avoided achieving the large eccentricities
 									that would have otherwise destroyed their companions and/or excited their obliquities during their path to their close-in orbits.</p>
 									<header class="style1">
-										<h4>TOI-5126 and TOI-5398 (Radzom et al. 2024a, accepted to AJ)</h4>
+										<h4>TOI-5126 and TOI-5398 (Radzom et al. 2024 AJ 168 116)</h4>
 									</header>
 									<div>
 									    <img src="images/subSat_RMs.jpg" width="771" height="361" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
