--- a/research.html
+++ b/research.html
@@ -68,8 +68,8 @@
 									 <p>Curiously, the population of wider-orbiting counterparts to hot Jupiters, known as warm Jupiters, appear
 										 to have properties consistent with quiescent origins, and their somewhat less massive counterparts, known as hot sub-Saturns,
 										may have properties intermediate to hot and warm Jupiters.
-										 My PhD dissertation research at IU aims to disentangle the origins of short-period
-										 giant planets through a combination of observational and numerical studies, which are detailed below.
+										 In this context, my PhD dissertation research at <u>IU aims to investigate the origins of short-period
+										 giant planets</u> through a combination of observational and numerical studies, which are detailed below.
 									</p>
 									
 									<header class="style1">
@@ -77,9 +77,10 @@
 									</header>
 									<p>Stellar obliquity, or the angle between the stellar spin axis and the orbit normal axis of its planet(s), is a unqiue
 									and informative indicator of a system's dynamical history. Despite decades of effort, it remains unclear whether
-									the primary mechanism driving spin-orbit misalignment is a universal process that takes place during formation, with the protoplanetary
-									disk present, or an evolution-specific process that occurs in post-disk phase, perhaps due to the violent dynamics inherent
-									to high-eccentricty migration. Compact multi-planet systems offer a unique opportunity to differentiate
+									the primary mechanism driving spin-orbit misalignment is a universal process that takes place during formation
+										with the protoplanetary
+									disk present or an evolution-specific process that occurs in post-disk phase, perhaps due to the violent dynamics inherent
+									to high-eccentricty migration. In the latter case, may explain hot Jupiters (TODO). Compact multi-planet systems offer a unique opportunity to differentiate
 									between these competing hypotheses, as their
 									tightly-packed configurations preclude violent dynamical histories, including high-eccentricity migration, allowing
 									them to trace the primordial disk plane.</p>
