--- a/publications.html
+++ b/publications.html
@@ -51,12 +51,13 @@
 									</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li><strong>Brandon T. Radzom</strong>, Songhu Wang, Bonan Pu, Malena Rice, Dong-Hong Wu 2024. Post-disk Evolution of Short-Period Gas Giants in Compact Multi-planet Systems:
-											A Mechanism to Produce the Observed Companionship Dichotomy, <em>submitted to ApJ</em> </li>
+										<li><strong>Brandon T. Radzom</strong>, Songhu Wang, Bonan Pu, Malena Rice, Dong-Hong Wu 2024. <em>Post-disk Evolution of Short-Period Gas Giants in Compact Multi-planet Systems:
+											A Mechanism to Produce the Observed Companionship Dichotomy</em>, submitted to ApJ </li>
 										<li><strong>Brandon T. Radzom</strong>, Jiayin Dong, Malena Rice, Xian-Yu Wang, Samuel W. Yee, Tyler R. Fairnington,
-											Cristobal Petrovich, Songhu Wang 2024. Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact Sub-Saturn Systems, <em>accepted to AJ</em>, arXiv:2404.06504 </li>
+											Cristobal Petrovich, Songhu Wang 2024. <em>Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact Sub-Saturn Systems</em>, AJ 168 116,
+											doi:10.3847/1538-3881/ad61d8 </li>
 										<li><strong>Brandon T. Radzom</strong>, Anthony J. Taylor, Amy J. Barger,
-											Lennox L. Cowie 2022. X-ray Sources in the Chandra Field SSA22, <em>ApJ</em> 940 114, doi:10.3847/1538-4357/ac9bfe</li>
+											Lennox L. Cowie 2022. <em>X-ray Sources in the Chandra Field SSA22</em>, ApJ 940 114, doi:10.3847/1538-4357/ac9bfe</li>
 									</ol>
 										</font></p>
 									<header class="style1">
@@ -77,9 +78,12 @@
 											</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li><em>Measuring Stellar Obliquities To Constrain the Origins of Exoplanets.</em> Fall 2023 WIYN Board Meeting</li>
-										<li><em>In Situ Origins of Hot Jupiter Isolation.</em> Great Lakes Exoplanet Area Meeting 2022.</li>
-  										<li><em>The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4.</em> Fall 2020 IU Astronomy Lunch
+										<li><em>Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact Giant Systems.</em> Emerging Researchers in Exoplanets IX, Cornell University</li>
+										<li><em>Post-formation Dynamics: A Mechanism to Explain the Companionship Properties of Hot and Warm Jupiters.</em> Great Lakes Exoplanet Area Meeting 2023, Indiana University</li>
+										<li><em>Measuring Stellar Obliquities To Constrain the Origins of Exoplanets.</em> Fall 2023 WIYN Board Meeting, Virtual</li>
+										<li><em>Post-disk Dynamical Evolution: A Mechanism to Explain the Companionship Dichotomy Between Hot Jupiters and Warm Jupiters.</em> Division on Dynamical Astronomy Meeting #54, Michigan State University</li>
+										<li><em>In Situ Origins of Hot Jupiter Isolation.</em> Great Lakes Exoplanet Area Meeting 2022, Ohio State University</li>
+  										<li><em>The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4.</em> Fall 2020 Astronomy Lunch Talk, Indiana University
 Talk Series</li>
 									</ol>
 										</font></p>
@@ -88,10 +92,11 @@ Talk Series</li>
 										</header>
 									<p><font size="+2">
 									<ol style="color:black;">
+										<li><strong>Brandon T. Radzom</strong> et al. “Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact TESS Systems”, 2024, TESS Science Conference 3, 10.5281/zenodo.13117605</li>
+										<li>Cassandra Seltzer, Rudi Lein, </li><strong>Brandon T. Radzom</strong> et al. “THUNDER: A New Frontiers-class Titan orbiter mission concept from the NASA JPL Planetary Science Summer School”, 2024, Lunar and Planetary Science Conference, <a href="https://www.hou.usra.edu/meetings/lpsc2024/pdf/2529.pdf">Poster #2529</a></li>
 										<li><strong>Brandon T. Radzom</strong>, Songhu Wang, and Bonan Pu. “In Situ Origins of Hot Jupiters”, 2022, Emerging Researchers in Exoplanet Science VII, 10.5281/zenodo.6944743</li>
-											<li><strong>Brandon T. Radzom</strong>, Amy J. Barger, and Anthony J. Taylor. “Characterizing AGN Activity in the SSA22 Field”, 2020, American
-Astronomical Society Meeting #236, id.137.03
-</li>
+										<li><strong>Brandon T. Radzom</strong>, Amy J. Barger, and Anthony J. Taylor. “Characterizing AGN Activity in the SSA22 Field”, 2020, American Astronomical Society Meeting #236, id.137.03</li>
+										<li>Minho Kwon, Christopher Young, Matthew Ebert, Sebastian Malewicz, <strong>Brandon T. Radzom</strong> et al. “Progress toward entanglement of atomic ensemble quibits via Rydberg blockade”, 2018, International Conference on Atomic Physics</li>
 									</ol>
 										</font></p>
 								</article>
