--- a/research.html
+++ b/research.html
@@ -68,8 +68,8 @@
 									 <p>Curiously, the population of wider-orbiting counterparts to hot Jupiters, known as warm Jupiters, appear
 										 to have properties consistent with quiescent origins, and their somewhat less massive counterparts, known as hot sub-Saturns,
 										may have properties intermediate to hot and warm Jupiters.
-										 In this context, my PhD dissertation research at <u>IU aims to investigate the origins of short-period
-										 giant planets</u> through a combination of observational and numerical studies, which are detailed below.
+										 In this context, <em>my PhD dissertation research aims to investigate the origins of short-period
+										 giant planets</em> through a combination of observational and numerical studies, which are detailed below.
 									</p>
 									
 									<header class="style1">
