--- a/publications.html
+++ b/publications.html
@@ -66,11 +66,11 @@
 									</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li>Cassandra Seltzer, Rudi Lien, <strong>Brandon T. Radzom</strong>, et al. 2024. THUNDER: A Titan orbiter mission concept for the New Frontiers program, <em>submitted to PSJ</em></li>
-										<li>Jack Lubin, Xian-Yu Wang, Malena Rice, Jiayin Dong, Songhu Wang, <strong>Brandon T. Radzom</strong>, et al. 2023. TOI-1670 c, a 40 day
-											Orbital Period Warm Jupiter in a Compact System, Is Well Aligned, <em>ApJL</em>, 959 L5</li>
-										<li>Xian-Yu Wang, Malena Rice, Songhu Wang, Bonan Pu, Gudmundur Stefánsson, Suvrath Mahadevan, <strong>Brandon T. Radzom</strong>, et al. 2022. The Aligned
-											Orbit of WASP-148 b, the Only Known Hot Jupiter with a Nearby Warm Jupiter Companion, from NEID and HIRES, <em>ApJL</em>, 926 L8</li>
+										<li>Cassandra Seltzer, Rudi Lien, <strong>Brandon T. Radzom</strong>, et al. 2024. <em>THUNDER: A Titan orbiter mission concept for the New Frontiers program</em>, submitted to PSJ</li>
+										<li>Jack Lubin, Xian-Yu Wang, Malena Rice, Jiayin Dong, Songhu Wang, <strong>Brandon T. Radzom</strong>, et al. 2023. <em>TOI-1670 c, a 40 day
+											Orbital Period Warm Jupiter in a Compact System, Is Well Aligned</em>, ApJL, 959 L5</li>
+										<li>Xian-Yu Wang, Malena Rice, Songhu Wang, Bonan Pu, Gudmundur Stefánsson, Suvrath Mahadevan, <strong>Brandon T. Radzom</strong>, et al. 2022. <em>The Aligned
+											Orbit of WASP-148 b, the Only Known Hot Jupiter with a Nearby Warm Jupiter Companion, from NEID and HIRES</em>, ApJL, 926 L8</li>
 									</ol>
 										</font></p>
 									<header class="style1">
@@ -78,12 +78,12 @@
 											</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li><em>Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact Giant Systems.</em> Emerging Researchers in Exoplanets IX, Cornell University</li>
-										<li><em>Post-formation Dynamics: A Mechanism to Explain the Companionship Properties of Hot and Warm Jupiters.</em> Great Lakes Exoplanet Area Meeting 2023, Indiana University</li>
-										<li><em>Measuring Stellar Obliquities To Constrain the Origins of Exoplanets.</em> Fall 2023 WIYN Board Meeting, Virtual</li>
-										<li><em>Post-disk Dynamical Evolution: A Mechanism to Explain the Companionship Dichotomy Between Hot Jupiters and Warm Jupiters.</em> Division on Dynamical Astronomy Meeting #54, Michigan State University</li>
-										<li><em>In Situ Origins of Hot Jupiter Isolation.</em> Great Lakes Exoplanet Area Meeting 2022, Ohio State University</li>
-  										<li><em>The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4.</em> Fall 2020 Astronomy Lunch Talk, Indiana University
+										<li>“Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact Giant Systems” Emerging Researchers in Exoplanets IX, Cornell University</li>
+										<li>“Post-formation Dynamics: A Mechanism to Explain the Companionship Properties of Hot and Warm Jupiters” Great Lakes Exoplanet Area Meeting 2023, Indiana University</li>
+										<li>“Measuring Stellar Obliquities To Constrain the Origins of Exoplanets” Fall 2023 WIYN Board Meeting, Virtual</li>
+										<li>“Post-disk Dynamical Evolution: A Mechanism to Explain the Companionship Dichotomy Between Hot Jupiters and Warm Jupiters” Division on Dynamical Astronomy Meeting #54, Michigan State University</li>
+										<li>“In Situ Origins of Hot Jupiter Isolation” Great Lakes Exoplanet Area Meeting 2022, Ohio State University</li>
+  										<li>“The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4” Fall 2020 Astronomy Lunch Talk, Indiana University
 Talk Series</li>
 									</ol>
 										</font></p>
@@ -93,7 +93,7 @@ Talk Series</li>
 									<p><font size="+2">
 									<ol style="color:black;">
 										<li><strong>Brandon T. Radzom</strong> et al. “Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact TESS Systems”, 2024, TESS Science Conference 3, 10.5281/zenodo.13117605</li>
-										<li>Cassandra Seltzer, Rudi Lein, </li><strong>Brandon T. Radzom</strong> et al. “THUNDER: A New Frontiers-class Titan orbiter mission concept from the NASA JPL Planetary Science Summer School”, 2024, Lunar and Planetary Science Conference, <a href="https://www.hou.usra.edu/meetings/lpsc2024/pdf/2529.pdf">Poster #2529</a></li>
+										<li>Cassandra Seltzer, Rudi Lein, <strong>Brandon T. Radzom</strong> et al. “THUNDER: A New Frontiers-class Titan orbiter mission concept from the NASA JPL Planetary Science Summer School”, 2024, Lunar and Planetary Science Conference, <a href="https://www.hou.usra.edu/meetings/lpsc2024/pdf/2529.pdf">Poster #2529</a></li>
 										<li><strong>Brandon T. Radzom</strong>, Songhu Wang, and Bonan Pu. “In Situ Origins of Hot Jupiters”, 2022, Emerging Researchers in Exoplanet Science VII, 10.5281/zenodo.6944743</li>
 										<li><strong>Brandon T. Radzom</strong>, Amy J. Barger, and Anthony J. Taylor. “Characterizing AGN Activity in the SSA22 Field”, 2020, American Astronomical Society Meeting #236, id.137.03</li>
 										<li>Minho Kwon, Christopher Young, Matthew Ebert, Sebastian Malewicz, <strong>Brandon T. Radzom</strong> et al. “Progress toward entanglement of atomic ensemble quibits via Rydberg blockade”, 2018, International Conference on Atomic Physics</li>
