--- a/research.html
+++ b/research.html
@@ -38,14 +38,14 @@
 
 			<!-- Main -->
 				<div id="main" class="wrapper style2">
-					<div class="title">Exoplanets</div>
+					<div class="title">Exoplanets & Planetary Science</div>
 					<div class="container">
 
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>Dynamical Origins of Short-Period Giants (under construction)</h2>
+										<h2>Dynamical Origins of Short-Period Giants</h2>
 										<p>2021-Present</p>
 									</header>
 									
@@ -162,6 +162,7 @@
 								</article>
 								<br>
 								<br>
+								<!--
 								<article class="box post">
 									<header class="style1">
 										<h3>Parameterization of Stability in Hierarchical Multi-planet Systems</h3>
@@ -196,7 +197,20 @@
 									Preliminary results suggest that the harmonic mean of the K values within these types of systems is
 									the best indicator of the instability timescale.</p>
 									
-								</article>
+								</article> -->
+								<article class="box post">
+									<header class="style1">
+										<h3>THUNDER: A Titan orbiter mission concept for NASA's New Frontiers program</h3>
+									</header>
+									<div>
+									    <img src="images/THUNDERlogo.jpeg" width="400" height="400" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
+									</div>
+									<p>As part of NASA's 2023 Planetary Science Summer School (PSSS), I co-developed THUNDER
+										(Titan's Hydrocarbons: Unveiling New Dimensions of Evolutionary pRocesses), a New-Frontiers-class
+										orbiter mission concept to Saturn's largest moon, Titan. As Science Objective
+									Lead, I took charge of one of the mission's three science objectives: <em>To determine whether
+										Titan's major liquid hydrocarbon bodies are connected and exchanging material with each other through
+										a subsurface reservoir</em>. I also acted as Deputy PI and Science Chair on the concept.</p>
 							</div>
 
 					</div>
