--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</ul>-->
 					<div class="container">
 						<aside>
-						  <img src="images/brandon_gleam2022_cropped.jpg" width="280" height="280" align="right" class="block"
+						  <img src="images/brandon_gleam2022_cropped.jpg" width="260" height="260" align="right" class="block"
 								style="margin: 20px 20px 20px 40px;" alt="Brandon's GLEAM 2022 talk." />
 						  <!--<p>Giving a fun presentation at the 2022 Great Lakes Area Meeting on quiescent origins
 								for hot Jupiters!</p>-->
@@ -76,7 +76,7 @@
 						
 						<p class="style1">Hi! I am a rising 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU).
 							I am broadly interested in exoplanetary and planetary research, as well as mission development, and I
-							am an alumn of NASA's 2023 Planetary Science Summer School
+							am an alumnus of NASA's 2023 Planetary Science Summer School
 							<a href="https://www.jpl.nasa.gov/edu/intern/apply/nasa-science-mission-design-schools/">(PSSS)</a>.
 							My dissertation, under the advisorship of 
 							<a href="https://orcid.org/0000-0002-7846-6981/">Dr. Songhu Wang</a>, involves the use of numerical and observational efforts to 
@@ -88,7 +88,7 @@
 							Certificate in Computer Sciences, from the University of Wisconsin - Madison in May of 2020. 
 							</p>
 						<aside>
-							<img src="images/europa_brandon_cropped.jpg" width="280" height="280" align="right" 
+							<img src="images/europa_brandon_cropped.jpg" width="200" height="200" align="right" 
 									style="margin: 20px 20px 20px 40px;" alt="Me in front of the fully-assembled 
 									Europa Clipper spacecraft at JPL."/>
 							<!--<figcaption>Standing above the fully-assembled Europa Clipper spacecraft at NASA's Jet 
