--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</ul>-->
 					<div class="container">
 						<aside>
-						  <img src="images/brandon_gleam2022_cropped.jpg" width="260" height="260" align="right" class="block"
+						  <img src="images/brandon_gleam2022_cropped_5_4.jpg" width="260" height="208" align="right" class="block"
 								style="margin: 20px 20px 20px 40px;" alt="Brandon's GLEAM 2022 talk." />
 						  <!--<p>Giving a fun presentation at the 2022 Great Lakes Area Meeting on quiescent origins
 								for hot Jupiters!</p>-->
@@ -88,7 +88,7 @@
 							Certificate in Computer Sciences, from the University of Wisconsin - Madison in May of 2020. 
 							</p>
 						<aside>
-							<img src="images/europa_brandon_cropped.jpg" width="200" height="200" align="right" 
+							<img src="images/europa_brandon_cropped.jpg" width="200" height="200" align="left" 
 									style="margin: 20px 20px 20px 40px;" alt="Me in front of the fully-assembled 
 									Europa Clipper spacecraft at JPL."/>
 							<!--<figcaption>Standing above the fully-assembled Europa Clipper spacecraft at NASA's Jet 
