added PyIU description

--- a/experience.html
+++ b/experience.html
@@ -67,12 +67,34 @@
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>This page under construction...</h2>
-										<p>Come back soon!</p>
+										<h2><a href=https://github.com/BrandonRadzom/pyiu/>PyIU</a>: A Workshop Series on Python Essentials</h2>
+										<p>Fall 2022-Present</p>
 									</header>
 									<!--<a href="#" class="image featured">-->
 									<!--	<img src="images/pic01.jpg" alt="" /> -->
 									<!--</a>-->
+									<p>I am the founder and lead organizer for the novel PyIU Python workshop series at Indiana University (IU).
+									The overall goal of this event series is to spark interest in STEM and provide students with
+									the programming skills necessary to begin and ultimately succeed in scientific research. PyIU
+									consists of two in-person Python sessions, which are free and offered once each every semester.
+									The first is a lecture-style Python Crash Course designed to cover the fundamentals of Python
+									and programming, including variables, lists, logic, loops, functions, and plotting. The second
+									session, usually held later in the semester, is an Advanced Python Workshop that covers more
+									powerful Python tools, tricks, packages, and practical applications in research (past topics include
+									Data Analysis with numpy & pandas, Data Fitting, Statistics, Advanced Plotting, and much more). Both
+									sessions are entirely led by IU Astronomy graduate students and postdocs.</p>
+
+									<p>Since 2022, many original resources and code demos have been produced through PyIU,
+									which is why we have transitioned to making all materials available in a public
+									GitHub repository, which is accessible here:
+									<a href=https://github.com/BrandonRadzom/pyiu>github.com/BrandonRadzom/pyiu</a>. </p>
+									<p>Media:
+									<ul>
+										<li>Fall 2024 Crash Course: 
+											<a href=https://astro.indiana.edu/news-events/news/2024-fall-python-crash-course-wrapup.html>https://astro.indiana.edu/news-events/news/2024-fall-python-crash-course-wrapup.html</a></li>
+									<li>Spring 2023 Advanced Workshop: <a href=https://astro.indiana.edu/news-events/news/pythn-crash-course-2023.html>https://astro.indiana.edu/news-events/news/pythn-crash-course-2023.html</a></li>
+									</ul>
+								</p>
 									<p>See <a href="cv.html">CV</a> for relevant professional development experience.</p>
 								</article>
 							</div>
