--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								for hot Jupiters!</p>-->
 						</aside>
 						
-						<p class="style1">Hi! I am a rising 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU).
+						<p class="style1">Hi! I am a 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU).
 							I am broadly interested in exoplanetary and planetary research, as well as mission development, and I
 							am an alumnus of NASA's 2023 Planetary Science Summer School
 							<a href="https://www.jpl.nasa.gov/edu/intern/apply/nasa-science-mission-design-schools/">(PSSS)</a>.
