--- a/research.html
+++ b/research.html
@@ -101,7 +101,8 @@
 									</div>
 									<br>
 									<p>TOI-5143 is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
-										mission and confirmed by Quinn et al., in prep., and is only the <em>third</em> of such systems to have its stellar obliquity measured. We employ Bayesian Inference and the Doppler Shadow
+										mission and confirmed by Quinn et al., in prep., and is only the <em>third</em> of such systems to have its stellar obliquity
+										measured. In my recent analysis of this system, we employ Bayesian Inference and the Doppler Shadow
 									technique to measure its stellar obliquity via the RM effect, finding it is well-aligned. Our result continues the trend of alignemnt 
 										seen in previous
 									spin-orbit measurements for other hot Jupiters with nearby companions (e.g., WASP-47 b and WASP-84 b), as well as the current census of RM measurements
@@ -203,14 +204,26 @@
 										<h3>THUNDER: A Titan orbiter mission concept for NASA's New Frontiers program</h3>
 									</header>
 									<div>
-									    <img src="images/THUNDERlogo.jpeg" width="200" height="200" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
+									    <img src="images/THUNDERlogo.jpeg" width="200" height="200" align="left" style="margin: 0px 20px 0px 0px;" alt="" />
 									</div>
 									<p>As part of NASA's 2023 Planetary Science Summer School (PSSS), I co-developed THUNDER
 										(Titan's Hydrocarbons: Unveiling New Dimensions of Evolutionary pRocesses), a New-Frontiers-class
-										orbiter mission concept to Saturn's largest moon, Titan. As Science Objective
-									Lead, I took charge of one of the mission's three science objectives: <em>To determine whether
-										Titan's major liquid hydrocarbon bodies are connected and exchanging material with each other through
-										a subsurface reservoir</em>. I also acted as Deputy PI and Science Chair on the concept.</p>
+										orbiter mission concept to Saturn's largest moon, Titan. This mission responds directly to the 
+										New Frontiers 5 Announcement of Opportunity (released 2023) as well as the 2023-2032 Planetary 
+										Science Decadal Survey, addressing priority questions concerning solid surfaces and interiors,
+										solid body atmospheres, climate evolution, and dynamic habitability.</p>
+										
+										<p>As a Science Objective
+									Lead, I led the development of one of the mission's three science objectives, which seeks to identify and
+										characterize the scale and connectivity of Titan's liquid hydrocarbon bodies and potential 
+										subsurface reservoirs. I also acted as Deputy PI and Science Chair on the THUNDER team, and
+										correspondingly interfaced extensively with other objective leads, instrument leads, NASA's Team-X
+										mission design experts, and external engineers and scientists,
+										to build a coherent science case for THUNDER and ensure closure. PSSS culminated with a Point Design
+										Study with Team-X at JPL and subsequently a mock Porfolio Gate Review presentation to a review panel of
+										NASA scientists, engineers, and executives. Our manuscript detailing the mission concept
+										(Seltzer, Lien, Radzom et al.) is currently under review for publication in the Planetary Science Journal.
+									</p>
 							</div>
 
 					</div>
@@ -229,7 +242,7 @@
 										<p>2019-2022</p>
 									</header>
 									<div>
-									    <img src="images/AGN_upres.jpg" width="500" height="281" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
+									    <img src="images/AGN_upres.jpg" width="500" height="281" align="right" style="margin: 0px 0px 0px 20px;" alt="" />
 									    <p>Image Credit: NASA/Goddard Space Flight Center Conceptual Image Lab</p>
 									</div>
 									
