--- a/publications.html
+++ b/publications.html
@@ -51,6 +51,9 @@
 									</header>
 									<p><font size="+2">
 									<ol style="color:black;">
+										<li><strong>Brandon T. Radzom</strong>, Jiayin Dong, Malena Rice, Xian-Yu Wang, Kyle Hixenbaugh, George Zhou,
+											Chelsea X. Huang, Songhu Wang 2024. <em>Evidence for Primordial Alignment II: Insights from
+												Stellar Obliquity Measurements For Hot Jupiters in Compact Multi-planet Systems</em>, submitted to ApJL </li>
 										<li><strong>Brandon T. Radzom</strong>, Songhu Wang, Bonan Pu, Malena Rice, Dong-Hong Wu 2024. <em>Post-disk Evolution of Short-Period Gas Giants in Compact Multi-planet Systems:
 											A Mechanism to Produce the Observed Companionship Dichotomy</em>, submitted to ApJ </li>
 										<li><strong>Brandon T. Radzom</strong>, Jiayin Dong, Malena Rice, Xian-Yu Wang, Samuel W. Yee, Tyler R. Fairnington,
@@ -67,6 +70,7 @@
 									<p><font size="+2">
 									<ol style="color:black;">
 										<li>Cassandra Seltzer, Rudi Lien, <strong>Brandon T. Radzom</strong>, et al. 2024. <em>THUNDER: A Titan orbiter mission concept for the New Frontiers program</em>, submitted to PSJ</li>
+										<li>R. K. Honeycutt, Jeff W. Robertson, <strong>Brandon T. Radzom</strong>, et al. 2024. <em>Stunted Outbursts and Z Cam-like Behaviors in the Long-term Light Curves of Nova-like Cataclysmic Variables</em>, submitted to ApJS</li>
 										<li>Jack Lubin, Xian-Yu Wang, Malena Rice, Jiayin Dong, Songhu Wang, <strong>Brandon T. Radzom</strong>, et al. 2023. <em>TOI-1670 c, a 40 day
 											Orbital Period Warm Jupiter in a Compact System, Is Well Aligned</em>, ApJL, 959 L5</li>
 										<li>Xian-Yu Wang, Malena Rice, Songhu Wang, Bonan Pu, Gudmundur Stefánsson, Suvrath Mahadevan, <strong>Brandon T. Radzom</strong>, et al. 2022. <em>The Aligned
