--- a/experience.html
+++ b/experience.html
@@ -73,8 +73,9 @@
 									<!--<a href="#" class="image featured">-->
 									<!--	<img src="images/pic01.jpg" alt="" /> -->
 									<!--</a>-->
-									<p>I am the founder and lead organizer for the novel PyIU Python workshop series at Indiana University (IU).
-									The overall goal of this event series is to spark interest in STEM and provide students with
+									<p>In fall of 2022, I organized the first-ever Python Crash Course session for astronomy undergraduates
+									at Indiana University (IU). This single event blossomed into the recurring PyIU Python workshop series,
+									which serves to spark interest in STEM and provide students with
 									the programming skills necessary to begin and ultimately succeed in scientific research. PyIU
 									consists of two in-person Python sessions, which are free and offered once each every semester.
 									The first is a lecture-style Python Crash Course designed to cover the fundamentals of Python
